--- a/report/Conclusions/conclusions.tex
+++ b/report/Conclusions/conclusions.tex
@@ -8,6 +8,19 @@
 
 \def\baselinestretch{1.66}
 
+Future:
+\begin{itemize}
+\item{\textit{VerbNet}: a lexical database that groups verbs by semantic and syntactic linking behaviour.\cite{schuler2005verbnet}}
+\item{\textit{ACE}: a classification of names, places and other proper nouns for Named Entity Recognition.\cite{doddington2004automatic}}
+\item{\textit{PropBank}: an annotated corpus a million words defining and providing argument role labels for verbs\cite{kingsbury2002treebank}}
+\item{\textit{NomBank}: similar to PropBank, but for nouns instead of verbs.\cite{meyers2004nombank}}
+\item{\textit{Metaphor Magnet}: a web application that maps commonplace metaphors in everyday texts\cite{vealespecifying}}
+Google Ngrams
+\item{\textit{LinguaTools DISCO}: a tool to derive semantic similarity between words based on statistical analysis of large text collections\cite{kolb2008disco}}
+
+\textit{DBPedia}
+\end{itemize}
+
 %%% ----------------------------------------------------------------------
 
 % ------------------------------------------------------------------------
