--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -605,6 +605,7 @@ While SRL may not be able to handle "donkey phrases" and does not inherently res
 
 
 \subsubsection{Semantic Knowledge Resources}
+\label{sec:sem-net}
 There are various sources of different types of semantic information that are used to improve the quality of computational semantic understanding. Here we discuss those that are use heavily in this project and could potentially be used in the future.
 
 \paragraph{WordNet}
