--- a/report/Implementation/implementation.tex
+++ b/report/Implementation/implementation.tex
@@ -5,17 +5,17 @@
     \graphicspath{{Implementation/ImplementationFigs/EPS/}{Implementation/ImplementationFigs/}}
 \fi
 
-The second phase of implementation involves interpreting the first phase analysis results. The goal is that these interpretations can be used to template the structure and outline the content for certain collections of poems, ultimately guiding the generation of novel and authentic poetry in the final phase.
+The second phase of implementation involves interpreting the results of the analysis phase. The goal is that these interpretations can be used to template the structure and outline the content for certain collections of poems, ultimately guiding the generation of novel and authentic poetry in the final phase.
 
-\section{Balancing Priorities and Trade-offs}
+\section{Approach}
 \label{sec:balance-priorities}
 
-In deciding how to approach this phase, we need to make predictions about the usage of the final interpretation and assumptions about the quality, or lack thereof, of the corpus and analysis. Doing this will outline the priorities and trade-offs in implementation that will most benefit the generation phase.
+In deciding how to approach this phase, we need to make predictions about the usage of the final interpretation and assumptions about the quality, or lack thereof, of the corpus and analysis.
 
 
 \subsection{The Corpus}
 
-The corpus is a large collection of poems. We may assume that each poem is already marked with the type of the collection - limerick, haiku, riddle etc. - much like data in a supervised machine learning problem. However, the poems should otherwise be \textit{unseen} before analysis; we know nothing else about them. 
+The corpus is a large collection of poems. We may assume that each poem is already marked with the \textit{type} of the collection - limerick, haiku, riddle etc. - much like data in a supervised machine learning problem. However, the poems should otherwise be \textit{unseen} before analysis; we know nothing else about them. 
 
 Poems are most easily obtained from anthologies. This works very well with our assumptions as the data is already labelled with the type of poem, but we know nothing else about the content.
 
@@ -30,7 +30,7 @@ his verses were fine\\
 until the fourth line\\
 ?
 }
-\caption{A very awkward limerick}
+\caption{A very awkward limerick for analysis}
 \label{fig:awkward-limerick}
 \end{figure}
 Nevertheless, our blindness to the content of the corpus means the system must be robust to such outliers. Therefore, we \textit{will} get anomalous results and need to be able to cope with them.
@@ -41,15 +41,13 @@ The first two stages aim to be an exhaustive analysis of any type of poem. The f
 
 For example, limericks that start with \textit{'There was a...'} may have a very distinctive rhythm pattern for the first line that is otherwise not strictly followed. Therefore, when generating new poetry in the next phase that starts with \textit{'There was a...'}, we want to make sure we abide by this correlation.
 
-There will be many correlations with more than two variables that may be more difficult to spot, but the complexity of finding all of them is exponential. We need to find a balance between usage of this data and the complexity in obtaining it.
+There will be many correlations with more than two variables that may be more difficult to spot, but the complexity of finding all of them is exponential. We need to find a balance between the usefulness of this data and the complexity in obtaining it.
 
 \subsection{Novel and Creative Generation}
 
-There's another catch to the correlation problem - red herrings. Some features can be taken as law; 5 lines in a limerick, 5-7-5 syllable pattern in Haiku, iambic pentameter in Shakespearean Sonnets. However, some may just be coincidences or the result of a very biased corpus.
+There is another catch to the correlation problem - red herrings. Some features can be taken as law; 5 lines in a limerick, 5-7-5 syllable pattern in Haiku, iambic pentameter in Shakespearean Sonnets. However, some may be coincidences or the result of a very biased corpus.
 
-Furthermore, we want to be able to create poems that are \textit{novel} and \textit{creative}. So while we need to be guided by prior art on structure and content to create authentic pieces of literary art, we need to balance that with freedom of creativity. 
-
-Perhaps we can use this stage to give us an idea of when and how we are allowed to diverge.
+Furthermore, we want to be able to generate poems that are \textit{novel} and \textit{creative}. So while we need to be guided by prior art on structure and content to create authentic pieces of literary art, we need to balance that with freedom of creativity. 
 
 
 \section{A Stochastic Approach}
@@ -63,18 +61,18 @@ The most suitable implementation that meets the priorities listed above is:
 \item{For each feature, create a probability distribution of the results that represents the likelihood of any particular value occurring for each feature. If 95 out of 100 limericks have an \textit{AABBA} rhyme scheme, then we consider the probability of an \textit{AABBA} rhyme scheme in a limerick to be 95\%.}
 \end{itemize}
 
-The aggregation step can be bespoke to each feature. For example, we would aggregate the tenses for each line of each poem differently to the way we would aggregate the overall tense for each poem. This enables us to handle outliers on a case-by-case basis since they are defined differently for every feature.
+The aggregation step is bespoke to each feature. For example, we aggregate the tenses for each line of each poem differently to the way we would aggregate the overall tense for each poem. This enables us to handle outliers on a case-by-case basis since they are defined differently for every feature.
 
-We can also decide how to interpret the data on a case-by-case basis, helping us handle the varying error bands for each feature. For example, detecting the rhyme scheme is more error-prone than detecting the number of syllables so we may round a 95\% result for rhyme scheme up to 100\%, but take it literally for syllable pattern.
+We can also decide how to \textit{interpret} the data on a case-by-case basis, helping us handle the varying error bands for each feature. For example, detecting the rhyme scheme is more error-prone than detecting the number of syllables so we may round a 95\% result for rhyme scheme up to 100\%, but take it literally for syllable pattern.
 
-This implementation also gives an effective way of finding correlations. We take a value for one of the features as a \textit{given}, filter the store of analysed poems by this value and aggregate in the same way. We can take any number of given values and of any permutation since each feature is aggregated and interpreted in isolation.
+This implementation also gives an effective way of finding correlations. We take a value for one of the features as a \textit{given}, filter the store of analysed poems by this value and aggregate. We can take any number of given values and of any permutation since each feature is aggregated and interpreted in isolation.
 
 As a bonus, this implementation quite efficient both in terms of time and space (see Section \ref{sec:interpret-perf}). By storing the original poem analysis results, we can apply given values and find correlations \textit{lazily}, i.e. only when needed.
 
 
 \section{Algorithms}
 
-There are four main algorithms that are used for aggregation. All features can be aggregated using some variant of these algorithms, with slight feature-specific amendments so to have the flexibility and precision mentioned in the previous sections.
+All features can be aggregated using some variant of one of four algorithms, with slight feature-specific amendments so to have the flexibility and precision mentioned in the previous sections.
 
 \subsection{List Comprehension}
 \label{sec:listcomp}
@@ -108,7 +106,7 @@ Once this is done, we can apply the list comprehension algorithm described in Se
 }
 \subsection{Pick the Most Popular}
 
-The analysis of a single poem often has some ambiguities. For example, the rhyme scheme for a collection can never be decided by looking at just one poem because words can be pronounced in more than one way. The limerick in Figure \ref{fig:ambiguous-rhyme} could either be \textit{AABBA} or \textit{AABBC} because \textit{invited} can be pronounced as \textit{('IH', 'N', 'V', 'AY', 'T', \textbf{'AH'}, 'D')} or \textit{('IH0', 'N', 'V', 'AY', 'T', \textbf{'IH'}, 'D')} according to the CMU pronunciation dictionary.
+The analysis of a single poem often has some ambiguities. For example, the rhyme scheme for a collection can never be decided by looking at just one poem because words can be pronounced in more than one way. The limerick in Figure \ref{fig:ambiguous-rhyme} could either be \textit{AABBA} or \textit{AABBC} because \textit{invited} can be pronounced as \textit{[IH N V AY T \textbf{AH} D]} or \textit{[IH0 N V AY T \textbf{IH}, D]} according to the CMU pronunciation dictionary.
 
 \begin{figure}[h!]
 \centering
@@ -123,19 +121,19 @@ As if he'd been really invited.\\
 \label{fig:ambiguous-rhyme}
 \end{figure}
 
-The analysis phase doesn't make a claim on which rhyme scheme is 'correct' and instead stores all possibilities in a list \texttt{[x$_1$, x$_2$, ..., x$_n$]}, where \texttt{x$_i$} is the $i$\textsuperscript{th} rhyme scheme possibility up to \texttt{n} possibilities for the particular poem being analysed.
+The analysis phase does not make a claim on which rhyme scheme is accepted and instead stores all possibilities in a list \texttt{[x$_1$, x$_2$, ..., x$_n$]}, where \texttt{x$_i$} is the $i$\textsuperscript{th} rhyme scheme possibility up to \texttt{n} possibilities for the particular poem being analysed.
 
-Let's assume again that we only have three poems in the corpus. Once they are all analysed, we get three lists \texttt{[x$_1$, x$_2$, ..., x$_n$]}, \texttt{[y$_1$, y$_2$, ..., y$_n$]} and \texttt{[z$_1$, z$_2$, ..., z$_n$]} of possible rhyme schemes for all three poems.
+Let's assume again that we only have three poems in the corpus. Once they are all analysed, we get three lists \texttt{[x$_1$, x$_2$, ..., x$_n$]}, \texttt{[y$_1$, y$_2$, ..., y$_n$]} and \texttt{[z$_1$, z$_2$, ..., z$_n$]} of possible rhyme schemes for each poem.
 
 We illustrate what we want to happen by taking four cases:
 \begin{itemize}
-\item{None of the possibilities across all poems are the same. Then all are equally probable and that gives us our probability distribution.}
+\item{All possibilities across all poems are unique. Therefore, all are equally probable and that gives us our probability distribution.}
 \item{There is \textit{one} set of indices $(p, q, r)$ such that \texttt{x$_p$} == \texttt{y$_q$} == \texttt{z$_r$}. Then we take that to be the rhyme scheme and no other possibility is considered.}
-\item{There is $m$\textit{\textgreater 1} sets of indices $(p_1, q_1, r_1), (p_2, q_2, r_2), ..., (p_m, q_m, r_m)$ such that for all $i$ up to $m$, \texttt{x$_{p_i}$} == \texttt{y$_{q_i}$} == \texttt{z$_{r_i}$}. Then all sets are candidate rhyme schemes where each rhyme scheme has a probability of $1/m$.}
+\item{There is $m$\textit{\textgreater 1} sets of indices $(p_1, q_1, r_1), (p_2, q_2, r_2), ..., (p_m, q_m, r_m)$ such that for all $i$ up to $m$, \texttt{x$_{p_i}$} == \texttt{y$_{q_i}$} == \texttt{z$_{r_i}$}. Then all \textbf{sets} are candidate rhyme schemes where each rhyme scheme has a probability of $1/m$.}
 \item{There is a $p$ and a $q$ such that \texttt{x$_p$} == \texttt{y$_q$}, but no $r$ such that \texttt{y$_q$} == \texttt{z$_r$}. In this case, the rhyme scheme \texttt{x$_p$} has a probability of two thirds, while every rhyme scheme \texttt{z$_i$} has the probability of one third each.}
 \end{itemize}
 
-An iterative implementation makes this process simple. We want to find and save the most popular rhyme scheme among all poems and remove all sets of possibilities that contain it. We repeat on the remaining poems over and over until we have no more poems. 
+An iterative implementation makes this process simple. We first find the most popular rhyme scheme among all poems in a set and save its frequency. We then remove all poems that contain the most popular rhyme scheme from the set and repeat on the remaining poems until there are no more poems in the set. 
 
 Algorithm BLAH shows the pseudo-code for this implementation.
 
@@ -155,7 +153,7 @@ Algorithm BLAH shows the pseudo-code for this implementation.
 
 \subsection{Filter Below Threshold}
 
-This algorithm deals mostly with content-based features such as n-grams, persona relations and types of persona. These features are varied, unpredictable, error-prone and highly sensitive to bias in the corpus. However, they can still provide very interesting and useful data to guide generation and create authentic poems. For example, starting a limerick with 'There was a...' and talking about nature in Haikus.
+This algorithm deals mostly with content-based features such as n-grams, persona relations and types of persona. These features are varied, unpredictable, error-prone and highly sensitive to bias in the corpus. However, they can still provide very interesting and useful data to guide generation and create authentic poems. For example, starting a limerick with \textit{'There was a...'} and talking about nature in Haikus.
 
 In this case, we perform the most suitable of the three aforementioned algorithms to collect all possible results. We then apply a filter so that only results that occur with \textit{significant frequency} can be taken into account.
 
@@ -165,15 +163,15 @@ Unfortunately, there is no way to tell what frequency can really be counted as s
 
 We test and validate this phase by looking at two factors:
 \begin{enumerate}
-\item{Accuracy of our assumptions and predictions made at the start of this chapter.}
+\item{Accuracy of the assumptions and predictions made at the start of this chapter.}
 \item{Comparison of results with known poetry theory.}
 \end{enumerate}
 
-While some automated tests can be written to make sure that the algorithms above are implemented correctly, there is no desired output against which to compare. We cannot check for exact matches with poetry theory because this is an \textit{investigation} where known theory is the hypothesis. Writing tests that fail if the hypothesis is not correct is a very biased investigation to say the least.
+While some automated tests can be written to make sure that the algorithms above are implemented correctly, there is no desired output against which to compare. We cannot check for exact matches with poetry theory because this is an \textit{investigation} where known theory is the hypothesis. Writing tests that fail if the hypothesis is not correct is an investigative fallacy.
 
 Therefore, the best way to test and validate the results of this stage is by inspection. Python provides a convenient interface for graphing large sets of data, which also make it easy to inspect by eye. 
 
-The corpus used to test the system comprises of 450 limericks scrounged from the Internet. As mentioned earlier, poems gathered from the Internet are likely to have more outliers and anomalies, which makes for a more rigorous examination of this system. 
+The corpus used to test the system comprises of 450 limericks scrounged from the Internet. As mentioned earlier, poems gathered from the Internet are likely to have more outliers and anomalies, which makes for a more rigorous examination of the quality of our analysis and interpretation. 
 
 A noteworthy subset of the results are shown in Figures \ref{fig:rhyme-scheme-chart} through \ref{fig:overall-tense-chart}. The y-axis is given in raw values instead of probabilities for this testing stage.
 \newcommand{\exedout}{%
@@ -182,32 +180,29 @@ A noteworthy subset of the results are shown in Figures \ref{fig:rhyme-scheme-ch
 
 \begin{figure}[t!]
 \centering
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{RhymeSchemes}
-	\caption{AABBA rhyme scheme by far the most common}
-	\label{fig:rhyme-scheme-chart}
-\end{minipage}
-~
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{StanzaLines}
-	\caption{Five lines long, one stanza}
-	\label{fig:stanza-lines-chart}
-\end{minipage}
+\includegraphics[height=.4\textheight]{StanzaLines}
+\caption{Five lines long, one stanza}
+\label{fig:stanza-lines-chart}
+\end{figure}
+
+\begin{figure}[t!]
+\centering
+\includegraphics[height=.4\textheight]{RhymeSchemes}
+\caption{AABBA rhyme scheme by far the most common}
+\label{fig:rhyme-scheme-chart}
 \end{figure}
 
 \begin{figure*}[t!]
     \centering
-    \begin{subfigure}[t]{0.45\textwidth}
+    \begin{subfigure}[t]{0.9\textwidth}
         \centering
-        \includegraphics[width=.9\textwidth]{PersonaTypes}
+        \includegraphics[height=.4\textheight]{PersonaTypes}
         \caption{Limericks talk a lot about people}
     \end{subfigure}%
-    ~ 
-    \begin{subfigure}[t]{0.45\textwidth}
+    
+    \begin{subfigure}[t]{0.9\textwidth}
         \centering
-        \includegraphics[width=.9\textwidth]{PersonaAnimation}
+        \includegraphics[height=.4\textheight]{PersonaAnimation}
         \caption{Most persona are either animate objects or 'concepts' such as places}
     \end{subfigure}
     \caption{Limericks generally talk about people and other animate objects}
@@ -216,55 +211,33 @@ A noteworthy subset of the results are shown in Figures \ref{fig:rhyme-scheme-ch
 
 \begin{figure}[t!]
 \centering
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{PersonaRelation}
-	\caption{Limericks talk about who these people are, what properties they have, what they are named, where they are, their capabilities, what they do, what is done to them etc.}
-	\label{fig:persona-relation-chart}
-\end{minipage}
-~
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{Line1NGrams}
-	\caption{The first line often introduces the person, usually as either old or young}
-	\label{fig:n-grams-1-chart}
-\end{minipage}
+\includegraphics[height=.4\textheight]{PersonaRelation}
+\caption{Limericks talk about who these people are, what properties they have, what they are named, where they are, their capabilities, what they do, what is done to them etc.}
+\label{fig:persona-relation-chart}
 \end{figure}
-
 
 \begin{figure}[t!]
 \centering
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{DistinctSentences}
-	\caption{Whole poem seems to be either one or two sentences. This actually tells us that full stops are not needed, but if they are used then the whole poem is generally two sentences long.}
-	\label{fig:distinct-sentences-chart}
-\end{minipage}
-~
-\begin{minipage}[t]{.45\textwidth}
-	\centering
-	\includegraphics[width=.9\textwidth]{OverallTense}
-	\caption{Never in future tense, mostly in past an sometimes in present}
-	\label{fig:overall-tense-chart}
-\end{minipage}
+\includegraphics[height=.4\textheight]{Line1NGrams}
+\caption{The first line often introduces the person, usually as either old or young}
+\label{fig:n-grams-1-chart}
 \end{figure}
 
-The results of these and other corpora will be explored fully in the Evaluation chapter later. It is sufficient for the moment to say that these are good results because they match sufficiently to known poetry theory. They are also usable in the generation phase to apply rules but also guides us on the strength of these rules, suggesting where divergence may be applicable as desired.
+\begin{figure}[t!]
+\centering
+\includegraphics[height=.4\textheight]{DistinctSentences}
+\caption{Whole poem seems to be either one or two sentences. This actually tells us that full stops are not needed, but if they are used then the whole poem is generally two sentences long.}
+\label{fig:distinct-sentences-chart}
+\end{figure}
 
-\section{Concurrency and Performance}
-\label{sec:interpret-perf}
+\begin{figure}[t!]
+\centering
+\includegraphics[height=.4\textheight]{OverallTense}
+\caption{Never in future tense, mostly in past an sometimes in present}
+\label{fig:overall-tense-chart}
+\end{figure}
 
-Since poems are analysed and features are aggregated \textit{in isolation}, there is plenty of scope for concurrency.
-
-For the poem analysis, a thread pool managed the concurrent execution of 10 workers, each analysing one poem. Trial and error showed 10 to be the optimal number of worker threads. Large resources such as the CMU Pronouncing Dictionary and WordNet were created once and shared amongst the threads.
-
-Under this set up with machine specifications as given in the Appendix section \ref{sec:specs}, 450 limericks were analysed in an average of 2 hours and 14 minutes.
-
-This was sufficiently fast for this corpus and since this is data is pre-processed and stored. However, using Python's Pool Executor library rather than the Threading module enables us to move over to processes instead of threads with minimal effort if we need multi-core parallelism. It should be noted that this might be slower due to larger overhead and the need for large resources to be created in multiple locations since memory cannot be shared.
-
-The generalisation process was actually fastest without the overhead of constructing the thread pool. With a thread pool of any number of workers, the average processing time is above 42 seconds for the results of the 450 analysed limericks. Without threading, the process took 40.1 seconds on average.
-
-This generalisation process is fast enough for it to be done over again with different given values as discussed in Section \ref{sec:approach} earlier in the chapter. This is will be very important in getting precise guidance during the generalisation phase. 
+The results of these and other corpora will be explored fully in the Evaluation. It is sufficient for the moment to say that these are good results because they match sufficiently to known poetry theory. They are also usable in the generation phase to apply rules but also guides us on the strength of these rules, suggesting where divergence may be applicable.
 
 
 % ------------------------------------------------------------------------
